--- a/styles/style.css
+++ b/styles/style.css
@@ -1,31 +1,348 @@
 .page {
   min-width: 1100px;
-  /* мы ещё не умеем делать мобильную версию сайта, */
-  /* поэтому выше установлена минимальная ширина страницы */
   max-width: 1600px;
-  /* выше установили ограничение по максимальной ширине */
   margin: 0 auto;
-  /* выше для экранов больше 1600px отцентрировали весь контент */
   font-family: 'Helvetica Neue', Arial, sans-serif;
 }
 
+.link {
+  text-decoration: none;
+}
+
+.logo {
+  width: 183px;
+  height: 32px;
+}
+
+.logo_place_header {
+  position: absolute;
+  top: 30px;
+  left: 64px;
+}
+
 .header {
+  display: flex;
+  align-items: center;
+  position: relative;
   height: 100vh;
   min-height: 600px;
   max-height: 756px;
-  /* выше установили ограничения для секции */
+  background-color: #f2f2f2;
+  min-height: 600px;
+  max-height: 756px;
 }
 
-/* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
+.header__title {
+  width: 730px;
+  font-size: 102px;
+  font-weight: 700;
+  position: relative;
+  left: 64px;
+  z-index: 3;
+}
+
+.header__subtitle {
+  display: block;
+  position: absolute;
+  left: 64px;
+  bottom: 30px;
+  width: 388px;
+  font-size: 18px;
+  line-height: 25px;
+  font-weight: normal;
+  z-index: 3;
+}
+
+.header__link {
+  color: #2f80ed;
+  text-decoration: none;
+}
+
+.header__main-illustration {
+  width: 765px;
+  height: 608px;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  z-index: 2;
+}
+
 .header__square-pic {
-  height: 568px;
+  position: absolute;
+  right: 0;
+  top: 64px;
   width: 568px;
+  height: 568px;
+  background-color: #2f80ed;
+  z-index: 1;
 }
 
-/* и элемента с модификатором вида ключ-значение */
-.table__cell_theme_dark {
-  width: 200px;
-  color: white;
-  margin-right: 0;
-  margin-top: 80px;
+.description {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 100px 0 100px 0;
 }
+
+.two-columns {
+  display: flex;
+  width: 80%;
+  justify-content: space-between;
+
+}
+
+.two-columns__main-text_span-accent {
+  line-height: 32px;
+  font-size: 24px;
+  font-weight: 700;
+}
+
+.two-columns__brief {
+  width: 175px;
+}
+
+.two-columns__brief_text {
+  position: relative;
+  top: 0;
+  left: 0;
+  margin: 0;
+  font-size: 18px;
+  line-height: 1.2;
+  font-weight: normal;
+  color: #2f80ed;
+}
+
+.two-columns__main-text {
+display: flex;
+flex-direction: column;
+justify-content: space-between;
+min-width: 784px;
+width: 80%;
+
+}
+
+.two-columns__main-text_paragraph {
+  line-height: 32px;
+  font-size: 24px;
+  font-weight: normal;
+  margin: 0 0 30px 0;
+}
+
+.two-columns__main-text_paragraph:last-of-type {
+  margin-bottom: 0;
+}
+
+.digits {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 100px 0 100px 0;
+}
+
+.section-title {
+  width: 60%;
+  line-height: 1.15;
+  font-size: 60px;
+  font-weight: 700;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.section-subtitle {
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+  margin: 20px 0 0 0;
+}
+
+.section__table {
+  width: 1100px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.table__cell {
+width: 250px;
+margin-top: 60px;
+}
+
+.table__heading {
+  line-height: 1.15;
+  font-size: 24px;
+  font-weight: 700;
+  margin: 0;
+}
+
+.table__text {
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+  margin: 20px 0 0 0;
+}
+
+.table__text-bank {
+  margin: 20px 0 0 0;
+}
+
+.feynman {
+  background-color: #f2f2f2;
+  position: relative;
+  background-image: url(/images/feynman.png);
+  background-repeat: no-repeat;
+  background-size: 867px 637px;
+  background-position: bottom left;
+  min-height: 790px;
+
+}
+
+.feynman__title {
+  line-height: 1.15;
+  font-size: 120px;
+  font-weight: 700;
+  width: 648px;
+  margin: 0 auto;
+  padding-top: 100px;
+  text-align: center;
+}
+
+.feynman__subtitle {
+  text-align: center;
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: normal;
+}
+
+.feynman__link {
+  color: #2f80ed;
+  line-height: 51px;
+  font-size: 36px;
+  font-weight: normal;
+  position: absolute;
+  right: 48px;
+  top: 50%;
+}
+
+.kaufman {
+  background-color: #1f1f1f;
+  color: white;
+  position: relative;
+  overflow: hidden;
+}
+
+.section-title_theme-dark {
+  width: 60%;
+  text-align: center;
+  margin: 90px auto 20px auto;
+
+}
+
+.section-subtitle_theme-dark {
+  width: 60%;
+  text-align: center;
+  margin: 20px auto 0 auto;
+}
+
+.table__cell_theme-dark {
+  width: 200px;
+  margin-top: 80px;
+  z-index: 2;
+}
+
+.table_theme-dark {
+  margin: 0 auto 90px auto;
+  z-index: 2;
+}
+
+.kaufman__triangle {
+position: absolute;
+top: 0;
+right: -210px;
+width: 877px;
+height: 877px;
+}
+
+.footer {
+  color: white;
+  min-height: 350px;
+  background-color: #1f1f1f;
+  display: flex;
+  justify-content: center;
+}
+
+.footer__columns {
+  width: 90%;
+  display: flex;
+  justify-content: space-between;
+  padding: 60px 0 40px 0;
+}
+
+.footer__column {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+}
+
+.logo__place_footer {
+  width: 183px;
+  height: 35px;
+}
+
+.footer__column_content-copyright {
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+  flex-direction: column;
+  flex-basis: 711px;
+}
+
+.footer__author {
+  margin: 18px 0;
+  line-height: 25px;
+  font-size: 18px;
+  font-weight: normal;
+}
+
+
+.footer__column-heading {
+  margin: 0;
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.footer__column-links {
+  margin: 20px auto 18px;
+  display: flex;
+  flex-direction: column;
+  text-decoration: none;
+  color: white;
+}
+
+.footer__column-links-no-list-style {
+  list-style: none;
+  padding: 0;
+}
+
+.footer__column-link {
+  text-decoration: none;
+  line-height: 30px;
+  font-size: 18px;
+  font-weight: normal;
+  color: white;
+}
+
+.footer__social-icon {
+  height: 16px;
+  width: 16px;
+  margin-right: 10px;
+}
+
+.footer__column_content-social {
+  display: flex;
+  align-items: flex-start;
+}
+
+
+
