--- a/styles/style.css
+++ b/styles/style.css
@@ -186,7 +186,7 @@ margin-top: 60px;
 .feynman {
   background-color: #f2f2f2;
   position: relative;
-  background-image: url(/images/feynman.png);
+  background-image: url(../images/feynman.png);
   background-repeat: no-repeat;
   background-size: 867px 637px;
   background-position: bottom left;
