--- a/styles/style.css
+++ b/styles/style.css
@@ -40,6 +40,7 @@
 }
 
 .header__subtitle {
+  margin: 0;
   display: block;
   position: absolute;
   left: 64px;
@@ -89,7 +90,7 @@
 
 }
 
-.two-columns__main-text_span-accent {
+.two-columns__span-accent {
   line-height: 32px;
   font-size: 24px;
   font-weight: 700;
@@ -97,9 +98,6 @@
 
 .two-columns__brief {
   width: 175px;
-}
-
-.two-columns__brief_text {
   position: relative;
   top: 0;
   left: 0;
@@ -111,22 +109,22 @@
 }
 
 .two-columns__main-text {
-display: flex;
-flex-direction: column;
-justify-content: space-between;
-min-width: 784px;
-width: 80%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  min-width: 784px;
+  width: 80%;
 
 }
 
-.two-columns__main-text_paragraph {
+.two-columns__paragraph {
   line-height: 32px;
   font-size: 24px;
   font-weight: normal;
   margin: 0 0 30px 0;
 }
 
-.two-columns__main-text_paragraph:last-of-type {
+.two-columns__paragraph:last-of-type {
   margin-bottom: 0;
 }
 
@@ -161,8 +159,8 @@ width: 80%;
 }
 
 .table__cell {
-width: 250px;
-margin-top: 60px;
+  width: 250px;
+  margin-top: 60px;
 }
 
 .table__heading {
@@ -179,10 +177,6 @@ margin-top: 60px;
   margin: 20px 0 0 0;
 }
 
-.table__text-bank {
-  margin: 20px 0 0 0;
-}
-
 .feynman {
   background-color: #f2f2f2;
   position: relative;
@@ -191,6 +185,7 @@ margin-top: 60px;
   background-size: 867px 637px;
   background-position: bottom left;
   min-height: 790px;
+  padding-top: 100px;
 
 }
 
@@ -200,7 +195,6 @@ margin-top: 60px;
   font-weight: 700;
   width: 648px;
   margin: 0 auto;
-  padding-top: 100px;
   text-align: center;
 }
 
@@ -209,6 +203,7 @@ margin-top: 60px;
   line-height: 51px;
   font-size: 36px;
   font-weight: normal;
+  margin: 70px 0 0 0;
 }
 
 .feynman__link {
@@ -222,6 +217,8 @@ margin-top: 60px;
 }
 
 .kaufman {
+  display: flex;
+  flex-direction: column;
   background-color: #1f1f1f;
   color: white;
   position: relative;
@@ -232,6 +229,7 @@ margin-top: 60px;
   width: 60%;
   text-align: center;
   margin: 90px auto 20px auto;
+  z-index: 2;
 
 }
 
@@ -239,6 +237,7 @@ margin-top: 60px;
   width: 60%;
   text-align: center;
   margin: 20px auto 0 auto;
+  z-index: 2;
 }
 
 .table__cell_theme-dark {
@@ -253,11 +252,14 @@ margin-top: 60px;
 }
 
 .kaufman__triangle {
-position: absolute;
-top: 0;
-right: -210px;
-width: 877px;
-height: 877px;
+  position: absolute;
+  top: 0;
+  right: -210px;
+  width: 877px;
+  height: 877px;
+  background-image: url(../images/kaufman-triangle.svg);
+  background-repeat: no-repeat;
+  background-size: 877px 877px;
 }
 
 .footer {
@@ -266,6 +268,7 @@ height: 877px;
   background-color: #1f1f1f;
   display: flex;
   justify-content: center;
+  z-index: 0;
 }
 
 .footer__columns {
