--- a/styles/style.css
+++ b/styles/style.css
@@ -120,7 +120,7 @@
 }
 
 .two-columns__paragraph {
-  line-height: 32px;
+  line-height: 34px;
   font-size: 24px;
   font-weight: normal;
   margin: 0 0 30px 0;
@@ -144,6 +144,7 @@
   font-weight: 700;
   margin: 0 auto;
   text-align: center;
+  z-index: 2;
 }
 
 .section-subtitle {
@@ -170,14 +171,13 @@
   font-size: 24px;
   font-weight: 700;
   margin: 0;
-  padding-bottom: 20px;
 }
 
 .table__text {
   line-height: 1.2;
   font-size: 18px;
   font-weight: normal;
-  margin: 0;
+  margin: 20px 0 0 0;
 }
 
 .feynman {
@@ -226,7 +226,7 @@
   color: white;
   position: relative;
   overflow: hidden;
-  padding: 90px 0 90px 0;
+  padding: 0px 0 90px 0;
 }
 
 .kaufman__triangle {
@@ -242,7 +242,6 @@
 
 .section-title_theme_dark {
   width: 60%;
-  text-align: center;
   margin:90px auto 20px auto;
   line-height: 1.15;
   font-size: 60px;
@@ -254,7 +253,7 @@
 .section-subtitle_theme_dark {
   width: 60%;
   text-align: center;
-  margin: 20px auto 0 auto;
+  margin: 0 auto;
   z-index: 2;
 }
 
@@ -297,14 +296,13 @@
   display: flex;
   justify-content: center;
   z-index: 0;
-  padding-top: 60px;
 }
 
 .footer__columns {
   width: 90%;
   display: flex;
   justify-content: space-between;
-  padding-bottom: 40px;
+  padding: 60px 0 40px 0;
 }
 
 .footer__column {
@@ -314,7 +312,7 @@
 
 }
 
-.logo__place_footer {
+.logo_place_footer {
   width: 183px;
   height: 35px;
 }
@@ -343,7 +341,7 @@
 }
 
 .footer__column-links {
-  margin: 20px auto 18px;
+  margin: 20px 0 18px 0;
   display: flex;
   flex-direction: column;
   text-decoration: none;
