--- a/blocks/khan/__buy-link/khan__buy-link.css
+++ b/blocks/khan/__buy-link/khan__buy-link.css
@@ -1,4 +1,4 @@
-.khan__element-buy-link {
+.khan__buy-link {
   line-height: 24px;
   font-size: 30px;
   font-weight: normal;
@@ -6,6 +6,6 @@
   transition: 0.2s;
 }
 
-.khan__element-buy-link:hover {
+.khan__buy-link:hover {
   opacity: 0.7;
 }
