--- a/blocks/video/__iframe/video__iframe.css
+++ b/blocks/video/__iframe/video__iframe.css
@@ -1,4 +1,9 @@
 .video__iframe {
-  margin-right: 20px;
   transform: translate(0, 50px );
+  width: 515px;
+  height: 316px;
 }
+.video__iframe:first-of-type {
+    margin-right: 20px;
+}
+
